--- a/index.html
+++ b/index.html
@@ -27,35 +27,28 @@
           </div>
           <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-              <li><a href="first.html"><span class="czech">Úvod</span><span class="english">Introduction</span><span class="french">Introduction</span></a></li>
+              <li><a href="first.html"><span class="czech">Úvod</span><span class="english">Introduction</span><span class="french">Accueil</span></a></li>
               <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown">O Obci <b class="caret"></b></a>
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="czech">O Obci</span><span class="english">Town</span><span class="french">Le village</span> <b class="caret"></b></a>
                 <ul class="dropdown-menu">
-                  <li><a href="#">Poloha</a></li>
-                  <li><a href="#">Historie</a></li>
-                  <li><a href="#">Urbanistický vývoj</a></li>
-                  <li><a href="#">Vývoj využití ploch</a></li>
+                  <li><a href="location.html"><span class="czech">Poloha</span><span class="english">Location</span><span class="french">La localisation</span></a></li>
+                  <li><a href="history.html"><span class="czech">Historie</span><span class="english">History</span><span class="french">La histoire</span></a></li>
+                  <li><a href="urban.html"><span class="czech">Urbanistický vývoj</span><span class="english">Urban development</span><span class="french">Le développement urbain du village</span></a></li>
+                  <li><a href="landUse.html"><span class="czech">Vývoj využití ploch</span><span class="english">Land Use</span><span class="french">L'utilisation des terres</span></a></li>
                 </ul>
               </li>
               <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Rekonstrukce obce <b class="caret"></b></a>
                 <ul class="dropdown-menu">
-                  <li><a href="#">Model středu obce</a></li>
-                  <li><a href="#">Model jednotlivých buduv</a></li>
+                  <li><a href="reconstruction.html"><span class="czech">Úvod</span><span class="english">Introduction</span><span class="french">La introduction</span></a></li>
+                  <li><a href="model_town.html"><span class="czech">Model středu obce</span><span class="english">The model of the town centre</span><span class="french">Le modèle du village</span></a></li>
+                  <li><a href="models.html"><span class="czech">Model buduv</span><span class="english">Models</span><span class="french">Des modèles de bâtiments</span></a></li>
                 </ul>
               </li>
-              <li><a href="#">O Projektu</a></li>
-              <li><a href="#">Kontakt</a></li>
+              <li><a href="about.html"><span class="czech">O Projektu</span><span class="english">About</span><span class="french">A propos du projet</span></a></li>
+              <li><a href="contakt.html"><span class="czech">Kontakt</span><span class="english">Contact</span><span class="french">Le contact</span></a></li>
             </ul>
           </div>
-          <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
-              <span class="czech">Jazyk</span><span class="english">Language</span><span class="french">Langue</span> <span class="caret"></span>
-            </button>
-            <ul class="dropdown-menu" role="menu">
-              <li><a href="javascript:chooseStyle('none',60)"><b>Česky</b></a></li>
-              <li><a href="javascript:chooseStyle('english',60)"><b>English</b></a></li>
-              <li><a href="javascript:chooseStyle('french',60)"><b>Fran&ccedil;ais</b></a></li>
-            </ul>
         </div>
       </div>
     </nav>
@@ -77,7 +70,19 @@
     </div>
 
     <footer class="navbar-fixed-bottom">
-      <div class="container paticka">&copy; Ing. Renata Duchnová</div>
+      <div class="container paticka">
+        &copy; Ing. Renata Duchnová
+<!--
+        <li class="dropdown">
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="czech">Jazyk</span><span class="english">Language</span><span class="french">Langue</span> <b class="caret"></b></a>
+                    <ul class="dropdown-menu">
+                      <li><a href="javascript:chooseStyle('none', 60)">Česky</a></li>
+                      <li><a href="javascript:chooseStyle('english', 60)">English</a></li>
+                      <li><a href="javascript:chooseStyle('french', 60)">Fran&ccedil;ais</a></li>
+                    </ul>
+                </li>
+-->
+      </div>
     </footer>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
