--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="alternate stylesheet" href="/css/english.css" title="english" media="screen"/>
     <link rel="alternate stylesheet" href="/css/french.css" title="french" media="screen"/>
     <link rel="stylesheet" href="/css/bootstrap.css"/>
+    <link rel="icon" href="/img/favicon.ico">
 
     <script src="lib/styleswitch.js"></script>
 
@@ -144,12 +145,17 @@
           <span class="english">Thank you, Ing. Renata Duchnová</span>
           <span class="french"></span></p>
         </div>
+
+        <p><span class="czech"></span>
+        <span class="english"></span>
+        <span class="french"></span></p>
       </div>
     </div>
 
     <footer class="navbar-fixed-bottom">
       <div class="container paticka">
-        &copy; Ing. Renata Duchnová
+        <span class="czech">&copy; Ing. Renata Duchnová s použitím knihovny <a href="http://getbootstrap.com"><i>Bootstrap</i></a></span>
+        <span class="english">&copy; Ing. Renata Duchnová with contributions of <a href="http://getbootstrap.com"><i>Bootstrap</i></a> library</span>
 <!--
         <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="czech">Jazyk</span><span class="english">Language</span><span class="french">Langue</span> <b class="caret"></b></a>
