--- a/location.html
+++ b/location.html
@@ -7,6 +7,7 @@
     <link rel="alternate stylesheet" href="/css/english.css" title="english" media="screen"/>
     <link rel="alternate stylesheet" href="/css/french.css" title="french" media="screen"/>
     <link rel="stylesheet" href="/css/bootstrap.css"/>
+    <link rel="icon" href="/img/favicon.ico">
 
     <script src="lib/styleswitch.js"></script>
 
@@ -99,13 +100,56 @@
 
     <div class="wrapper">
       <div class="container">
+        <h2><span class="czech">Poloha obce</span>
+        <span class="english">Location of the town</span>
+        <span class="french"></span></h2>
 
+        <table class="zajuz_tab">
+          <tr>
+            <td>
+              <img src="../img/zajmove_uzemi2.png" alt="poloha Přísečnice" title="Poloha Přísečnice v rámci Ústeckého kraje">
+            </td>
+          </tr>
+          <tr>
+            <td class="label_pic">
+              <span class="czech">Poloha Přísečnice v rámci Ústeckého kraje</span>
+              <span class="english">Location Přísečnice in the Ústí region</span>
+            </td>
+          </tr>
+        </table>
+
+        <p><span class="czech">Obec Přísečnice se nacházela v&nbsp;SZ Čechách v&nbsp;oblasti Krušných hor mezi městy Vejprty, Výsluní a Kovářská v&nbsp;okrese Chomutov v Ústeckém kraji. Přibližné souřadnice středu bývalé obce jsou Y&nbsp;=&nbsp;827&nbsp;672&nbsp;m, X&nbsp;=&nbsp;988&nbsp;271&nbsp;m (S-JTSK).</span>
+        <span class="english"></span>
+        <span class="french"></span></p>
+
+        <p><span class="czech">Přísečnice ležela v&nbsp;údolí o&nbsp;průměrné nadmořské výšce 820&nbsp;m obklopena vrchy Jelení hora, Velký Špičák, Malý Špičák a Měděnec. Obcí protékal Přísečnický potok, který byl napájen bystřinami z&nbsp;okolních svahů. Blízké okolí obce bylo kulturně obhospodařováno, převažovala orná půda, pastviny a louky. V&nbsp;širším okolí obce se pak nacházely smíšené a jehličnaté lesy.</span>
+        <span class="english"></span>
+        <span class="french"></span></p>
+
+        <table class="zajuz_tab2">
+          <tr>
+            <td>
+              <img src="../img/zajmove_uzemi1.png" alt="poloha Přísečnice" title="Poloha Přísečnice v rámci přehrady">
+            </td>
+          </tr>
+          <tr>
+            <td class="label_pic">
+              <span class="czech">Poloha Přísečnice v rámci přehrady</span>
+              <span class="english">Location Přísečnice in the reservoir</span>
+            </td>
+          </tr>
+        </table>
+
+        <p><span class="czech">Zástavba obce tvořila tvar položeného <b>T</b> a rozbíhala se podél komunikací směřující na sever ke Kryštofovým Hamrům, na západ k Vejprtům a na jih k&nbsp;Dolině a Rusové. Průměrně se v&nbsp;obci nacházelo kolem 450&nbsp;domů a žilo až 4&nbsp;tis. obyvatel. Dominantou obce byl kostel Nanebevzetí Panny Marie s&nbsp;vysokou obdélníkovou věží nacházející se v&nbsp;jižní části centrální zástavby. Dalšími významnými stavbami pak byly empírová radnice a barokní zámek stojící na náměstí. K&nbsp;Přísečnici patřily také tři mlýny a pivovar. Nejbližší vlaková zastávka se nacházela v&nbsp;obci Rusová.</span>
+        <span class="english"></span>
+        <span class="french"></span></p>
       </div>
     </div>
 
     <footer class="navbar-fixed-bottom">
       <div class="container paticka">
-        &copy; Ing. Renata Duchnová
+        <span class="czech">&copy; Ing. Renata Duchnová s použitím knihovny <a href="http://getbootstrap.com"><i>Bootstrap</i></a></span>
+        <span class="english">&copy; Ing. Renata Duchnová with contributions of <a href="http://getbootstrap.com"><i>Bootstrap</i></a> library</span>
 <!--
         <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="czech">Jazyk</span><span class="english">Language</span><span class="french">Langue</span> <b class="caret"></b></a>
