--- a/model_town.html
+++ b/model_town.html
@@ -7,6 +7,7 @@
     <link rel="alternate stylesheet" href="/css/english.css" title="english" media="screen"/>
     <link rel="alternate stylesheet" href="/css/french.css" title="french" media="screen"/>
     <link rel="stylesheet" href="/css/bootstrap.css"/>
+    <link rel="icon" href="/img/favicon.ico">
 
     <script src="lib/styleswitch.js"></script>
 
@@ -99,13 +100,62 @@
 
     <div class="wrapper">
       <div class="container">
+        <header>
+          <h1 class="title"><b>Rekonstrukce zaniklé obce Přísečnice</b></h1>
+        </header>
+        <p class="front">
+          <img src="/img/line_up.png" alt=""/>
+          <br>
+          <b>Stránky o znovuzrození městečka ze severu Čech</b>
+          <br>
+          <img src="/img/line_down.png" alt=""/>
+          <img src="/img/front6.png" alt="front"/>
+        </p>
+        <h2 style="text-align:center;"><span class="czech">Úvod</span><span class="english">Introduction</span><span class="french">Accueil</span></h2>
+        <p><span class="czech">Vítejte na webových stránkách věnovaných rekonstrukci zaniklé obce Přísečnice, vytvořených v rámci projektu Ministerstva kultury <i>Rekonstrukce krajiny a databáze zaniklých obcí v&nbsp;Ústeckém kraji pro zachování kulturního dědictví</i> (NAKI&nbsp;DF12P01OVV043).</span>
+        <span class="english">Welcome to the website devoted to the reconstruction of the former town Přísečnice developed within the project of the Ministry of Culture Czech republic (NAKI&nbsp;DF12P01OVV043).</span>
+        <span class="french">Bienvenue</span></p>
 
+        <p><span class="czech">Rekonstrukce obce spočívá v&nbsp;modelaci jednotlivých domů a terénu pod obcí. Tyto modely jsou pak doplněny informacemi o původní budově, pokud jsou takové informace známy. Zároveň vzniká model středu obce z&nbsp;roku 1972. Povídání o&nbsp;modelech a jednotlivé modely budov jsou k&nbsp;dispozici v&nbsp;záložkách <i>Rekonstrukce obce</i>, <i>Model středu obce</i> a <i>Modely budov</i>. Stránky jsou doplněny také povídáním o&nbsp;poloze a historii obce - záložky <i>Poloha obce</i>, <i>Historie obce</i> a <i>Urbanistický vývoj obce</i>. V záložce <i>Vývoj využití ploch</i> je nastíněn vývoj využití ploch mezi roky 1842, 1953 a 2012. Je zde také možné si prohlédnout plány využití ploch pro jednotlivé roky. V záložce <i>O projektu</i> se nachází pár slov o těchto stránkách. Formulář pro zasílání námětů a poznámek naleznete v záložce <i>Kontakt</i>.</span>
+        <span class="english">Reconstruction of the town lies in the modeling of buildings and terrain of the town. These models are then supplemented with information on the original building, where such information is known. At the same time there is a model of the town center from 1972. Description of the models and the models of buildings are available in the tabs <i>Reconstruction of the town</i>, <i>Model of the town center</i> and <i>Models</i>. Pages are also extended description of the location and history of town - the tabs <i>Location</i>, <i>History</i> and <i>Urban development</i>. Development of Land use between the years 1842, 1953 and 2012 is in the tab <i>Land use</i>. It is also possible to see land use plans for each year. Information about this pages and project is in the tab <i>About</i>. Form for sending topics and notes is in the tab <i>Contact</i>.</span>
+        <span class="french"></span></p>
+
+        <p><span class="czech"><i>Stránky jsou vyvíjeny v operačním systému Windows 7 v prohlížeči Google Chrome. Omlouvám se všem, kterým tyto stránky správně nefungují pokud použijí jiný systém či prohlížeč.</i></span>
+        <span class="english"><i>Website is developed in the operating system Windows 7 and in the browser Google Chrome. I apologize to all to whom these pages do not work correctly when they will use another system or browser.</i></span>
+        <span class="french"></span></p>
+
+        <div class="alert alert-warning">
+          <h2><span class="czech">Prosba ke všem pamětníkům a přátelům Přísečnice</span>
+          <span class="english">Request to all old resident and friends of Přísečnice</span>
+          <span class="french"></span></h2>
+
+          <p><span class="czech">Chtěla bych Vás požádat o zapůjčení fotografií a pohlednic zachycující exteriéry a interiéry jednotlivých budov (které však nejsou vystaveny na stránkách Zaniklé obce), dále pak různé mapy a plánky, které by doplnily bílá místa a rozšířily oblast zájmu.</span>
+          <span class="english">I would like to ask you to loan photographs and postcards depicting the exteriors and interiors of buildings (which are not subject to the website Zaniklé obce). I am also interested in maps and plans that would expand the area interest.</span>
+          <span class="french"></span></p>
+
+          <p><span class="czech">Zájem mám také o místní pověsti, pohádky, pověry, texty písní, životní příběhy, vše, co by pomohlo dokreslit život v Přísečnici. Po získání dostatečného množství materiálu bude vytvořena zvláštní záložka o životě místních lidí.</span>
+          <span class="english">I am also interested in local tales and legends, superstitions, lyrics, life stories, everything that would help describe life in Přísečnice.</span>
+          <span class="french"></span></p>
+
+          <p><span class="czech">V případě zájmu o spolupráci mě kontaktujte přes formulář v záložce <i>Kontakt</i></span>
+          <span class="english">In case of interest please contact me via the form on the <i>Contact</i> tab.</span>
+          <span class="french"></span></p>
+
+          <p class="textRight"><span class="czech">Děkuji, Ing. Renata Duchnová</span>
+          <span class="english">Thank you, Ing. Renata Duchnová</span>
+          <span class="french"></span></p>
+        </div>
+
+        <p><span class="czech"></span>
+        <span class="english"></span>
+        <span class="french"></span></p>
       </div>
     </div>
 
     <footer class="navbar-fixed-bottom">
       <div class="container paticka">
-        &copy; Ing. Renata Duchnová
+        <span class="czech">&copy; Ing. Renata Duchnová s použitím knihovny <a href="http://getbootstrap.com"><i>Bootstrap</i></a></span>
+        <span class="english">&copy; Ing. Renata Duchnová with contributions of <a href="http://getbootstrap.com"><i>Bootstrap</i></a> library</span>
 <!--
         <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="czech">Jazyk</span><span class="english">Language</span><span class="french">Langue</span> <b class="caret"></b></a>
