--- a/urban.html
+++ b/urban.html
@@ -7,6 +7,7 @@
     <link rel="alternate stylesheet" href="/css/english.css" title="english" media="screen"/>
     <link rel="alternate stylesheet" href="/css/french.css" title="french" media="screen"/>
     <link rel="stylesheet" href="/css/bootstrap.css"/>
+    <link rel="icon" href="/img/favicon.ico">
 
     <script src="lib/styleswitch.js"></script>
 
@@ -99,13 +100,60 @@
 
     <div class="wrapper">
       <div class="container">
+        <h2><span class="czech">Urbanistický vývoj z roku 1972</span>
+        <span class="english">Urban development (1972)</span>
+        <span class="french"></span></h2>
 
+        <p><span class="czech">Stavebně-historický průzkum jednotlivých městských domů, zpracovaný pracovníky SÚPPOP v&nbsp;létě 1972, nepřinesl zjištění, která by mohla prohloubit nebo upřesnit nástin urbanistického vývoje města od dr.&nbsp;Dobroslava Líbala (These vývoje stavby měst v českých zemích, SÚRPMO, Praha 1964, strojopis, str.&nbsp;52-55.) Příslušnou pasáž Líbalova textu proto citujeme namísto úvodu:</span>
+        <span class="english"></span>
+        <span class="french"></span></p>
+
+        <p><span class="czech">"Přísečnice&nbsp;-&nbsp;z&nbsp;hlediska historického vývoje nejdůležitější krušnohorské město s&nbsp;bohatou, dnes však utajenou raně feudální minulostí, jež se skrývá již v&nbsp;samotném jméně, odvozeném od slova příseka. Znamená to, že důležitá obchodní stezka, která tu vede z&nbsp;Žatce nebo Kadaně do Saska mohla býti uzavřena záseky. Cesta se připomíná až v&nbsp;zápise z&nbsp;roku 1335 jako vedoucí z&nbsp;městečka (oppidum) Přísečnice do Loun. Význam Přísečnice velmi stoupl za kovové horečky v&nbsp;první polovině 16.&nbsp;století. V&nbsp;roce 1533 koupili městečko Šlikové a rychle rozšířili dolování na stříbro, které bylo velmi úspěšné. Postavení hradu okolo roku 1520 Lobkovici souviselo zřejmě rovněž s&nbsp;dolováním. V&nbsp;roce 1545 získal Přísečnici král Ferdinand. Počínaje druhou polovinou 16.&nbsp;století nastal v&nbsp;dolování úpadek, který dovršila třicetiletá válka."</span>
+        <span class="english"></span>
+        <span class="french"></span></p>
+
+        <p><span class="czech">Analýza půdorysu města je svízelná. Její správný výsledek je odvislý od určení místa původně raně feudální Přísečnice, případně pozdějšího městečka. Chybí nám k&nbsp;tomu základní předpoklady, možno v&nbsp;té souvislosti upozorniti na místní jméno Starý kostel na návrších východně potoka, skoro na čáře městského kostela.</span>
+        <span class="english"></span>
+        <span class="french"></span></p>
+
+        <p><span class="czech">Historický půdorysný organismus Přísečnice se zásadně rozpadá asi na 4 části, z&nbsp;nichž každá měla vlastně odchylné vývojové podmínky. Tak především je tu Kadaňská ulice sledující běh zmíněné obchodní cesty k průsmyku. Skoro paralelně, na vyšší úrovni ji sleduje Kostelní ulice směřující ke kostelu situovanému na mírně terenní vlně na jižním okraji města. Prostranství u&nbsp;paty kostela, mezi ním a někdejším potokem zaplňuje zmatený shluk dosti nepravidelných bloků s&nbsp;určitými radiálními prvky.</span>
+        <span class="english"></span>
+        <span class="french"></span></p>
+
+        <p><span class="czech">Jako třetí část uvádíme vlastní město s&nbsp;obdélným náměstím do něhož vnikají ulice jak v rozích, tak i v&nbsp;podálných stranách ovšem bez řádné vzájemné vazby. Tak např. po západní straně ústí do náměstí 3 úzké uličky, z&nbsp;nichž jedna je dosud překlenutá prampouchem.</span>
+        <span class="english"></span>
+        <span class="french"></span></p>
+
+        <p><span class="czech">Vústění ulic do náměstí ovšem zcela postrádá urbanistické kvality nedalekých novým borních založení. Konečně jako čtvrtá čast je Jáchymovská ulice čočkovitě se rozšiřující, jež vede od rohu náměstí k západu. Na sever od ní se vyvinul jakýsi nepravidelný plácek.</span>
+        <span class="english"></span>
+        <span class="french"></span></p>
+
+        <p><span class="czech">Kadaňská ulice by mohla v&nbsp;sobě obsahovat nějaké raně feudální prvky (rozvržení jejího jižního úseku severně hřbitovního kostela). Naproti tomu ulice Jáchymovská je daleko mladší, neboť spojovala Přísečnici, se středisky dolování, dále na západ. Zbývá nepřehledná zástavba jižně od kostela, která působí velmi bizarně a staře, ovšem to nestačí k právoplatnému zodpovědění problému místa raně feudální Přísečnice. Konečně zbývá ještě severní část města s&nbsp;náměstím kladené až do doby přeměny Přísečnice na horní město. Ostatně naše představa náměstí je zcela zkreslena. V&nbsp;letech 1519-23 dal na místě nynějšího zámku Vilém z&nbsp;Lobkovic postavit pevní vodní hrad s&nbsp;věžemi a příkopem, který ustoupil roku 1750 nynějšímu zámku. Znamená to, že vlastní prostor náměstí jižně od hradu zůstal velmi omezený. V každém případě byla jistě renesanční Přísečnice významnou a složitou sídelní aglomerací.</span>
+        <span class="english"></span>
+        <span class="french"></span></p>
+
+        <p><span class="czech">Město bylo posledních desetiletích značně narušeno, zejména v&nbsp;Jáchymovské ulici byla zástavba z&nbsp;převážné části likvidována.</span>
+        <span class="english"></span>
+        <span class="french"></span></p>
+
+        <p><span class="czech">Vzhledem k&nbsp;pronikavým asanacím provedeným v&nbsp;městské zástavbě od roku 1964, jež některé další městské bloké zcela zrušily a znejasnily tak celkovou urbanistickou strukturu obce, nelze již zodpovědět otevřené otázky, v&nbsp;Líbalově studii nastíněné. Pokud jde o&nbsp;charakter a vývoj zástavby městských bloků, lze předpokládat, že až do 19.&nbsp;století byla velmi chudá a nenáročná. Odpovídala rychlému hospodářskému úpadku bývalého horního města, jenž započal již ve 2.&nbsp;polovině 16.&nbsp;století.</span>
+        <span class="english"></span>
+        <span class="french"></span></p>
+
+        <p><span class="czech">Měšťaské domy, často polozemědělského charakteru s&nbsp;nevelkým hospodářských příslušenstvím ve dvorech, byly v&nbsp;převážné většině hrázděné nebo dřevěné. Tím lze také vysvětlit neobyčejně zhoubné následky častých požárů, zejména ohně v&nbsp;roce 1811, který větší část města do základů zničil. Z&nbsp;doby před ohněm se tak z&nbsp;městské zástavby dochovalo jen několik ojedinělých staveb, které byly na rozdíl od ostatních zděné (děkanství č.p.&nbsp;262, domy č.p.&nbsp;15, 72 a 189). Teprve po velkém požáru vyrůstají na spáleništi již pravidlem domy zděné, i nyní ovšem nevysoké výtvarné úrovně, s nenáročnými klasicistními fasádami a ohnivzdornými pruskými klendbami v&nbsp;přízemí. Většina z&nbsp;nich byla pak ve 2.&nbsp;polovině 19.&nbsp;století znovu opravována, nebo nahrazena novostavbami, přičemž s&nbsp;oblibou užívané novoklasicistní fasády, sjednocující celé uliční fronty, nejsou bez architektonické i urbanistické zajímavosti. Eklekticky smíšené historické slohy se v&nbsp;úpravě fasád prakticky neuplatnily a poměrně nevýrazně je zde zastoupena i secese. Vyjímkou tvoř pouze secesní spořitelna (č.p.&nbsp;77) na náměstí, s&nbsp;bohatou a výtvarně hodnotnou fasádou z&nbsp;prvního desetiletí 20.&nbsp;století.</span>
+        <span class="english"></span>
+        <span class="french"></span></p>
+
+        <p><span class="czech"><i>Text byl přejat z&nbsp;Umělecko-historického a stavebního průzkumu vypracovaného Státním ústavem památkové péče a ochrany přírody v&nbsp;Praze v&nbsp;roce 1972.</i></span>
+        <span class="english"></span>
+        <span class="french"></span></p>
       </div>
     </div>
 
     <footer class="navbar-fixed-bottom">
       <div class="container paticka">
-        &copy; Ing. Renata Duchnová
+        <span class="czech">&copy; Ing. Renata Duchnová s použitím knihovny <a href="http://getbootstrap.com"><i>Bootstrap</i></a></span>
+        <span class="english">&copy; Ing. Renata Duchnová with contributions of <a href="http://getbootstrap.com"><i>Bootstrap</i></a> library</span>
 <!--
         <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="czech">Jazyk</span><span class="english">Language</span><span class="french">Langue</span> <b class="caret"></b></a>
