--- a/index.html
+++ b/index.html
@@ -156,19 +156,24 @@
       <div class="container paticka">
         <span class="czech">&copy; Ing. Renata Duchnová s použitím knihovny <a href="http://getbootstrap.com"><i>Bootstrap</i></a></span>
         <span class="english">&copy; Ing. Renata Duchnová with contributions of <a href="http://getbootstrap.com"><i>Bootstrap</i></a> library</span>
-<!--
-        <li class="dropdown">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="czech">Jazyk</span><span class="english">Language</span><span class="french">Langue</span> <b class="caret"></b></a>
-                    <ul class="dropdown-menu">
-                      <li><a href="javascript:chooseStyle('none', 60)">Česky</a></li>
-                      <li><a href="javascript:chooseStyle('english', 60)">English</a></li>
-                      <li><a href="javascript:chooseStyle('french', 60)">Fran&ccedil;ais</a></li>
-                    </ul>
-                </li>
--->
+
       </div>
     </footer>
-
+<!--
+        <ul>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+            <span class="czech">Jazyk</span>
+            <span class="english">Language</span>
+            <span class="french">Langue</span> <b class="caret"></b></a>
+            <ul class="dropdown-menu">
+             <li><a href="javascript:chooseStyle('none', 60)">Česky</a></li>
+             <li><a href="javascript:chooseStyle('english', 60)">English</a></li>
+             <li><a href="javascript:chooseStyle('french', 60)">Fran&ccedil;ais</a></li>
+            </ul>
+          </li>
+        </ul>
+-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src="lib/bootstrap.min.js"></script>
   </body>
