--- a/location.html
+++ b/location.html
@@ -118,14 +118,6 @@
           </tr>
         </table>
 
-        <p><span class="czech">Obec Přísečnice se nacházela v&nbsp;SZ Čechách v&nbsp;oblasti Krušných hor mezi městy Vejprty, Výsluní a Kovářská v&nbsp;okrese Chomutov v Ústeckém kraji. Přibližné souřadnice středu bývalé obce jsou Y&nbsp;=&nbsp;827&nbsp;672&nbsp;m, X&nbsp;=&nbsp;988&nbsp;271&nbsp;m (S-JTSK).</span>
-        <span class="english"></span>
-        <span class="french"></span></p>
-
-        <p><span class="czech">Přísečnice ležela v&nbsp;údolí o&nbsp;průměrné nadmořské výšce 820&nbsp;m obklopena vrchy Jelení hora, Velký Špičák, Malý Špičák a Měděnec. Obcí protékal Přísečnický potok, který byl napájen bystřinami z&nbsp;okolních svahů. Blízké okolí obce bylo kulturně obhospodařováno, převažovala orná půda, pastviny a louky. V&nbsp;širším okolí obce se pak nacházely smíšené a jehličnaté lesy.</span>
-        <span class="english"></span>
-        <span class="french"></span></p>
-
         <table class="zajuz_tab2">
           <tr>
             <td>
@@ -140,9 +132,32 @@
           </tr>
         </table>
 
+        <p><span class="czech">Obec Přísečnice se nacházela v&nbsp;SZ Čechách v&nbsp;oblasti Krušných hor mezi městy Vejprty, Výsluní a Kovářská v&nbsp;okrese Chomutov v Ústeckém kraji. Přibližné souřadnice středu bývalé obce jsou Y&nbsp;=&nbsp;827&nbsp;672&nbsp;m, X&nbsp;=&nbsp;988&nbsp;271&nbsp;m (S-JTSK).</span>
+        <span class="english"></span>
+        <span class="french"></span></p>
+
+        <p><span class="czech">Přísečnice ležela v&nbsp;údolí o&nbsp;průměrné nadmořské výšce 820&nbsp;m obklopena vrchy Jelení hora, Velký Špičák, Malý Špičák a Měděnec. Obcí protékal Přísečnický potok, který byl napájen bystřinami z&nbsp;okolních svahů. Blízké okolí obce bylo kulturně obhospodařováno, převažovala orná půda, pastviny a louky. V&nbsp;širším okolí obce se pak nacházely smíšené a jehličnaté lesy.</span>
+        <span class="english"></span>
+        <span class="french"></span></p>
+
         <p><span class="czech">Zástavba obce tvořila tvar položeného <b>T</b> a rozbíhala se podél komunikací směřující na sever ke Kryštofovým Hamrům, na západ k Vejprtům a na jih k&nbsp;Dolině a Rusové. Průměrně se v&nbsp;obci nacházelo kolem 450&nbsp;domů a žilo až 4&nbsp;tis. obyvatel. Dominantou obce byl kostel Nanebevzetí Panny Marie s&nbsp;vysokou obdélníkovou věží nacházející se v&nbsp;jižní části centrální zástavby. Dalšími významnými stavbami pak byly empírová radnice a barokní zámek stojící na náměstí. K&nbsp;Přísečnici patřily také tři mlýny a pivovar. Nejbližší vlaková zastávka se nacházela v&nbsp;obci Rusová.</span>
         <span class="english"></span>
         <span class="french"></span></p>
+
+        <table>
+          <tr>
+            <td>
+              <img src="/img/prA5.png" alt="přehrada (2.5D)" title="Přehrada (2.5D)">
+            </td>
+          </tr>
+          <tr>
+            <td class="label_pic">
+              <span class="czech">Přehrada (2.5D)</span>
+              <span class="english">The reservoir (2.5D)</span>
+            </td>
+          </tr>
+        </table>
+
       </div>
     </div>
 
