--- a/landUse.html
+++ b/landUse.html
@@ -100,50 +100,97 @@
 
     <div class="wrapper">
       <div class="container">
-        <header>
-          <h1 class="title"><b>Rekonstrukce zaniklé obce Přísečnice</b></h1>
-        </header>
-        <p class="front">
-          <img src="/img/line_up.png" alt=""/>
-          <br>
-          <b>Stránky o znovuzrození městečka ze severu Čech</b>
-          <br>
-          <img src="/img/line_down.png" alt=""/>
-          <img src="/img/front6.png" alt="front"/>
-        </p>
-        <h2 style="text-align:center;"><span class="czech">Úvod</span><span class="english">Introduction</span><span class="french">Accueil</span></h2>
-        <p><span class="czech">Vítejte na webových stránkách věnovaných rekonstrukci zaniklé obce Přísečnice, vytvořených v rámci projektu Ministerstva kultury <i>Rekonstrukce krajiny a databáze zaniklých obcí v&nbsp;Ústeckém kraji pro zachování kulturního dědictví</i> (NAKI&nbsp;DF12P01OVV043).</span>
-        <span class="english">Welcome to the website devoted to the reconstruction of the former town Přísečnice developed within the project of the Ministry of Culture Czech republic (NAKI&nbsp;DF12P01OVV043).</span>
-        <span class="french">Bienvenue</span></p>
+        <h2><span class="czech">Vývoj využití ploch</span>
+        <span class="english">Land use</span>
+        <span class="french"></span></h2>
 
-        <p><span class="czech">Rekonstrukce obce spočívá v&nbsp;modelaci jednotlivých domů a terénu pod obcí. Tyto modely jsou pak doplněny informacemi o původní budově, pokud jsou takové informace známy. Zároveň vzniká model středu obce z&nbsp;roku 1972. Povídání o&nbsp;modelech a jednotlivé modely budov jsou k&nbsp;dispozici v&nbsp;záložkách <i>Rekonstrukce obce</i>, <i>Model středu obce</i> a <i>Modely budov</i>. Stránky jsou doplněny také povídáním o&nbsp;poloze a historii obce - záložky <i>Poloha obce</i>, <i>Historie obce</i> a <i>Urbanistický vývoj obce</i>. V záložce <i>Vývoj využití ploch</i> je nastíněn vývoj využití ploch mezi roky 1842, 1953 a 2012. Je zde také možné si prohlédnout plány využití ploch pro jednotlivé roky. V záložce <i>O projektu</i> se nachází pár slov o těchto stránkách. Formulář pro zasílání námětů a poznámek naleznete v záložce <i>Kontakt</i>.</span>
-        <span class="english">Reconstruction of the town lies in the modeling of buildings and terrain of the town. These models are then supplemented with information on the original building, where such information is known. At the same time there is a model of the town center from 1972. Description of the models and the models of buildings are available in the tabs <i>Reconstruction of the town</i>, <i>Model of the town center</i> and <i>Models</i>. Pages are also extended description of the location and history of town - the tabs <i>Location</i>, <i>History</i> and <i>Urban development</i>. Development of Land use between the years 1842, 1953 and 2012 is in the tab <i>Land use</i>. It is also possible to see land use plans for each year. Information about this pages and project is in the tab <i>About</i>. Form for sending topics and notes is in the tab <i>Contact</i>.</span>
+        <p><span class="czech">Při rekonstrukci krajiny zájmové oblasti bylo analyzováno využití ploch pro roky 1842, 1953 a 2012, které byly zvoleny na základě dostupných dat.</span>
+        <span class="english">A comparison of the use of land (in ha) is in the area of interest for three time horizons - for the years 1842, 1953 and 2012</span>
         <span class="french"></span></p>
 
-        <p><span class="czech"><i>Stránky jsou vyvíjeny v operačním systému Windows 7 v prohlížeči Google Chrome. Omlouvám se všem, kterým tyto stránky správně nefungují pokud použijí jiný systém či prohlížeč.</i></span>
-        <span class="english"><i>Website is developed in the operating system Windows 7 and in the browser Google Chrome. I apologize to all to whom these pages do not work correctly when they will use another system or browser.</i></span>
+        <p><span class="czech">Celková vektorizovaná plocha činila 2&nbsp;873,6 ha. Při vektorizaci císařských otisků bylo vytvořeno 5&nbsp;789 polygonů, u SMO-5 6&nbsp;323 polygonů. Data ze ZABAGED&reg; byla sloučena do 213 polygonů.</span>
+        <span class="english">Total vectorized area was 2&nbsp;873.6 ha, there were 5&nbsp;789 polygons vectorized on imperial imprints, 6&nbsp;323 polygons on SMO-5 and the ZABAGED&reg; data was merged into 213 polygons.</span>
         <span class="french"></span></p>
 
-        <div class="alert alert-warning">
-          <h2><span class="czech">Prosba ke všem pamětníkům a přátelům Přísečnice</span>
-          <span class="english">Request to all old resident and friends of Přísečnice</span>
-          <span class="french"></span></h2>
+        <p><span class="czech">V&nbsp;následující tabulce se nachází srovnání využití území v&nbsp;jednotlivých etapách. Nejvýraznější změna využití nastává mezi roky 1953 a 2012. Důvodem této změny je stavba vodní nádrže v&nbsp;70.&nbsp;letech 20.&nbsp;století. V&nbsp;těchto letech byla zcela zničena zástavba ve dvou vesnicích (Přísečnice a Dolina) a v&nbsp;jedné (Rusová) musela zástavba ustoupit I.&nbsp;ochrannému pásmu. Jelikož se jedná o&nbsp;nádrž na pitnou vodu, byl a je zakázán přístup na území I.&nbsp;pásma. To způsobilo přeměnu orné půdy na lesy a trvalý travní porost. Napuštěním vodní nádrže se celková hodnota výměry vodní plochy zvýšila téměř 28násobně.</span>
+        <span class="english">The most significant change of land use occurs between 1953 and 2012 due to the construction of a water reservoir in the seventies. In these years, two settlements were completely destroyed (Přísečnice and Dolina) and one village (Rusová) had to give ground to the 1st protective zone of drinking water reservoir. Thus, a conversion of arable land to forests and permanent grassland can be identified. After filling the water reservoir, the total value of the water area in this region increased almost 28 times.</span>
+        <span class="french"></span></p>
 
-          <p><span class="czech">Chtěla bych Vás požádat o zapůjčení fotografií a pohlednic zachycující exteriéry a interiéry jednotlivých budov (které však nejsou vystaveny na stránkách Zaniklé obce), dále pak různé mapy a plánky, které by doplnily bílá místa a rozšířily oblast zájmu.</span>
-          <span class="english">I would like to ask you to loan photographs and postcards depicting the exteriors and interiors of buildings (which are not subject to the website Zaniklé obce). I am also interested in maps and plans that would expand the area interest.</span>
-          <span class="french"></span></p>
+        <table class="vyvoj">
+          <tr>
+            <th><span class="czech">Kategorie [ha]</span>
+              <span class="english">Category [ha]</span></th>
+            <th><span class="czech">Rok 1842</span>
+              <span class="english">Year 1842</span></th>
+            <th><span class="czech">Rok 1953</span>
+              <span class="english">Year 1953</span></th>
+            <th><span class="czech">Rok 2012</span>
+              <span class="english">Year 2012</span></th>
+          </tr>
+          <tr>
+            <td><span class="czech">Orná půda</span>
+              <span class="english">Arable land</span>
+            </td><td>874,5</td><td>920,1</td><td>0,7</td>
+          </tr>
+          <tr>
+            <td><span class="czech">Trvalé plochy</span>
+              <span class="english">Permanent cultures</span>
+            </td><td>1,7</td><td>0,7</td><td>7,5</td>
+          </tr>
+          <tr>
+            <td><span class="czech">Trvalý travní porost</span>
+              <span class="english">Permanent grassland</span>
+            </td><td>474,2</td><td>375,3</td><td>789,6</td>
+          </tr>
+          <tr>
+            <td><span class="czech">Lesní plochy</span>
+              <span class="english">Forested areas</span>
+            </td><td>1413,8</td><td>1446,8</td><td>1733,7</td>
+          </tr>
+          <tr>
+            <td><span class="czech">Vodní plochy</span>
+              <span class="english">Water areas</span>
+            </td><td>10,2</td><td>11,6</td><td>322,7</td>
+          </tr>
+          <tr>
+            <td><span class="czech">Zastavěné plochy</span>
+              <span class="english">Built-up areas</span>
+            </td><td>10,7</td><td>14,5</td><td>1,3</td>
+          </tr>
+          <tr>
+            <td>
+              <span class="czech">Ostatní plochy</span>
+              <span class="english">Other areas</span>
+            </td><td>88,5</td><td>10,4</td><td>18,1</td>
+          </tr>
+        </table>
 
-          <p><span class="czech">Zájem mám také o místní pověsti, pohádky, pověry, texty písní, životní příběhy, vše, co by pomohlo dokreslit život v Přísečnici. Po získání dostatečného množství materiálu bude vytvořena zvláštní záložka o životě místních lidí.</span>
-          <span class="english">I am also interested in local tales and legends, superstitions, lyrics, life stories, everything that would help describe life in Přísečnice.</span>
-          <span class="french"></span></p>
+        <p><span class="czech">Při porovnání roků 1842 a 1953 lze vidět nárůst orné půdy a zastavěných ploch. Naopak výrazně ubylo ostatních ploch, což může být následkem ukončení těžby kamene a rašeliny. Dále se snížila plocha trvalého travního porostu. Ten byl zřejmě nahrazen ornou půdou. I&nbsp;přes některé nárůsty a poklesy v&nbsp;kategoriích lze říci, že od roku 1842 do roku 1953 se krajina i využití téměř nezměnilo. Největší změnou byla výstavba nádrže na pitnou vodu, která zapříčinila místní prudký pokles obyvatel a změnila ráz krajiny.</span>
+        <span class="english">In contrast, the extent of other areas significantly decreased which may be due to the termination of mining stone and peat. Permanent grassland was apparently replaced by arable land. Despite some increases and decreases in categories can be said that from 1842 to 1953, the landscape and its use almost unchanged. The biggest change was the construction of water dam which affected population and landscape of the region.</span>
+        <span class="french"></span></p>
 
-          <p><span class="czech">V případě zájmu o spolupráci mě kontaktujte přes formulář v záložce <i>Kontakt</i></span>
-          <span class="english">In case of interest please contact me via the form on the <i>Contact</i> tab.</span>
-          <span class="french"></span></p>
+        <p><span class="czech">Na následujících obrázcích si lze prohlédnout využití ploch pro jednotlivé roky.</span>
+        <span class="english"></span>
+        <span class="french"></span></p>
 
-          <p class="textRight"><span class="czech">Děkuji, Ing. Renata Duchnová</span>
-          <span class="english">Thank you, Ing. Renata Duchnová</span>
-          <span class="french"></span></p>
+        <div class="row">
+          <div class="col-md-2 col-sm-2 col-xs-6">
+            <a class="thumbnail" href="/img/prD1.png">
+              <img class="img-responsive" src="/img/prD1min.png" alt=" ">
+            </a>
+          </div>
+
+          <div class="col-lg-3 col-md-4 col-xs-6">
+            <a class="thumbnail" href="/img/prD2.png">
+              <img class="img-responsive" src="/img/prD2min.png" alt=" ">
+            </a>
+          </div>
+
+          <div class="col-lg-3 col-md-4 col-xs-6">
+            <a class="thumbnail" href="/img/prD3.png">
+              <img class="img-responsive" src="/img/prD3min.png" alt=" ">
+            </a>
+          </div>
         </div>
 
         <p><span class="czech"></span>
