--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                   <span class="french">Le modèle du village</span>
                   </a></li>
                   <li><a href="models.html">
-                  <span class="czech">Model buduv</span>
+                  <span class="czech">Modely buduv</span>
                   <span class="english">Models</span>
                   <span class="french">Des modèles de bâtiments</span>
                   </a></li>
@@ -111,12 +111,30 @@
           <img src="/img/line_down.png" alt=""/>
           <img src="/img/front6.png" alt="front"/>
         </p>
-        <h2 style="text-align:center;"><span class="czech">Úvod</span><span class="english">Introduction</span><span class="french">Accueil</span></h2>
+
+        <h2 style="text-align:center;"><span class="czech">Úvod</span>
+        <span class="english">Introduction</span>
+        <span class="french">Accueil</span></h2>
+
+        <aside class="bg-warning aktual">
+          <h3 class="new"><span class="czech">Novinky</span>
+          <span class="english">News</span>
+          <span class="french"></span></h3>
+
+          <p><span class="czech">09.04.2014: <i>Model domu <a href="#"><b>č. p. 70</b></a></i></span>
+          <span class="english">09.04.2014: <i>Model of the building <a href="#"><b>N&deg; 70</b></a></i></span>
+          <span class="french"></span>
+
+          <p><span class="czech">23.03.2014: <i>Modely domů <a href="#"><b>č. p. 71</b></a> a <a href="#"><b>č. p. 73</b></a></i></span>
+          <span class="english">23.03.2014: <i>Models of the buildings <a href="#"><b>N&deg; 71</b></a> and <a href="#"><b>N&deg; 73</b></a></i></span>
+          <span class="french"></span></p>
+        </aside>
+
         <p><span class="czech">Vítejte na webových stránkách věnovaných rekonstrukci zaniklé obce Přísečnice, vytvořených v rámci projektu Ministerstva kultury <i>Rekonstrukce krajiny a databáze zaniklých obcí v&nbsp;Ústeckém kraji pro zachování kulturního dědictví</i> (NAKI&nbsp;DF12P01OVV043).</span>
         <span class="english">Welcome to the website devoted to the reconstruction of the former town Přísečnice developed within the project of the Ministry of Culture Czech republic (NAKI&nbsp;DF12P01OVV043).</span>
         <span class="french">Bienvenue</span></p>
 
-        <p><span class="czech">Rekonstrukce obce spočívá v&nbsp;modelaci jednotlivých domů a terénu pod obcí. Tyto modely jsou pak doplněny informacemi o původní budově, pokud jsou takové informace známy. Zároveň vzniká model středu obce z&nbsp;roku 1972. Povídání o&nbsp;modelech a jednotlivé modely budov jsou k&nbsp;dispozici v&nbsp;záložkách <i>Rekonstrukce obce</i>, <i>Model středu obce</i> a <i>Modely budov</i>. Stránky jsou doplněny také povídáním o&nbsp;poloze a historii obce - záložky <i>Poloha obce</i>, <i>Historie obce</i> a <i>Urbanistický vývoj obce</i>. V záložce <i>Vývoj využití ploch</i> je nastíněn vývoj využití ploch mezi roky 1842, 1953 a 2012. Je zde také možné si prohlédnout plány využití ploch pro jednotlivé roky. V záložce <i>O projektu</i> se nachází pár slov o těchto stránkách. Formulář pro zasílání námětů a poznámek naleznete v záložce <i>Kontakt</i>.</span>
+        <p><span class="czech">Rekonstrukce obce spočívá v&nbsp;modelaci jednotlivých domů a terénu pod obcí. Tyto modely jsou pak doplněny informacemi o původní budově, pokud jsou takové informace známy. Zároveň vzniká model středu obce z&nbsp;roku 1972. Povídání o&nbsp;modelech a jednotlivé modely budov jsou k&nbsp;dispozici v&nbsp;záložkách <i>Rekonstrukce obce</i>, <i>Model středu obce</i> a <i>Modely budov</i>. Stránky jsou doplněny také povídáním o&nbsp;poloze a historii obce - záložka <i>O Obci</i>, která obsahuje záložky <i>Poloha</i>, <i>Historie</i>, <i>Urbanistický vývoj</i> a <i>Vývoj využití ploch</i> V poslední záložce je nastíněn vývoj využití ploch mezi roky 1842, 1953 a 2012. Je zde také možné si prohlédnout plány využití ploch pro jednotlivé roky. V záložce <i>O projektu</i> se nachází pár slov o těchto stránkách. Formulář pro zasílání námětů a poznámek naleznete v záložce <i>Kontakt</i>.</span>
         <span class="english">Reconstruction of the town lies in the modeling of buildings and terrain of the town. These models are then supplemented with information on the original building, where such information is known. At the same time there is a model of the town center from 1972. Description of the models and the models of buildings are available in the tabs <i>Reconstruction of the town</i>, <i>Model of the town center</i> and <i>Models</i>. Pages are also extended description of the location and history of town - the tabs <i>Location</i>, <i>History</i> and <i>Urban development</i>. Development of Land use between the years 1842, 1953 and 2012 is in the tab <i>Land use</i>. It is also possible to see land use plans for each year. Information about this pages and project is in the tab <i>About</i>. Form for sending topics and notes is in the tab <i>Contact</i>.</span>
         <span class="french"></span></p>
 
@@ -124,7 +142,7 @@
         <span class="english"><i>Website is developed in the operating system Windows 7 and in the browser Google Chrome. I apologize to all to whom these pages do not work correctly when they will use another system or browser.</i></span>
         <span class="french"></span></p>
 
-        <div class="alert alert-warning">
+        <div class="bg-warning aktual">
           <h2><span class="czech">Prosba ke všem pamětníkům a přátelům Přísečnice</span>
           <span class="english">Request to all old resident and friends of Přísečnice</span>
           <span class="french"></span></h2>
