--- a/reconstruction.html
+++ b/reconstruction.html
@@ -76,7 +76,7 @@
                   <span class="french">Le modèle du village</span>
                   </a></li>
                   <li><a href="models.html">
-                  <span class="czech">Model buduv</span>
+                  <span class="czech">Modely buduv</span>
                   <span class="english">Models</span>
                   <span class="french">Des modèles de bâtiments</span>
                   </a></li>
@@ -100,51 +100,110 @@
 
     <div class="wrapper">
       <div class="container">
-        <header>
-          <h1 class="title"><b>Rekonstrukce zaniklé obce Přísečnice</b></h1>
-        </header>
-        <p class="front">
-          <img src="/img/line_up.png" alt=""/>
-          <br>
-          <b>Stránky o znovuzrození městečka ze severu Čech</b>
-          <br>
-          <img src="/img/line_down.png" alt=""/>
-          <img src="/img/front6.png" alt="front"/>
-        </p>
-        <h2 style="text-align:center;"><span class="czech">Úvod</span><span class="english">Introduction</span><span class="french">Accueil</span></h2>
-        <p><span class="czech">Vítejte na webových stránkách věnovaných rekonstrukci zaniklé obce Přísečnice, vytvořených v rámci projektu Ministerstva kultury <i>Rekonstrukce krajiny a databáze zaniklých obcí v&nbsp;Ústeckém kraji pro zachování kulturního dědictví</i> (NAKI&nbsp;DF12P01OVV043).</span>
-        <span class="english">Welcome to the website devoted to the reconstruction of the former town Přísečnice developed within the project of the Ministry of Culture Czech republic (NAKI&nbsp;DF12P01OVV043).</span>
-        <span class="french">Bienvenue</span></p>
+        <h2><span class="czech">Rekonstrukce obce - úvod</span>
+        <span class="english">Reconstruction of the town - introdiction</span>
+        <span class="french"></span></h2>
 
-        <p><span class="czech">Rekonstrukce obce spočívá v&nbsp;modelaci jednotlivých domů a terénu pod obcí. Tyto modely jsou pak doplněny informacemi o původní budově, pokud jsou takové informace známy. Zároveň vzniká model středu obce z&nbsp;roku 1972. Povídání o&nbsp;modelech a jednotlivé modely budov jsou k&nbsp;dispozici v&nbsp;záložkách <i>Rekonstrukce obce</i>, <i>Model středu obce</i> a <i>Modely budov</i>. Stránky jsou doplněny také povídáním o&nbsp;poloze a historii obce - záložky <i>Poloha obce</i>, <i>Historie obce</i> a <i>Urbanistický vývoj obce</i>. V záložce <i>Vývoj využití ploch</i> je nastíněn vývoj využití ploch mezi roky 1842, 1953 a 2012. Je zde také možné si prohlédnout plány využití ploch pro jednotlivé roky. V záložce <i>O projektu</i> se nachází pár slov o těchto stránkách. Formulář pro zasílání námětů a poznámek naleznete v záložce <i>Kontakt</i>.</span>
-        <span class="english">Reconstruction of the town lies in the modeling of buildings and terrain of the town. These models are then supplemented with information on the original building, where such information is known. At the same time there is a model of the town center from 1972. Description of the models and the models of buildings are available in the tabs <i>Reconstruction of the town</i>, <i>Model of the town center</i> and <i>Models</i>. Pages are also extended description of the location and history of town - the tabs <i>Location</i>, <i>History</i> and <i>Urban development</i>. Development of Land use between the years 1842, 1953 and 2012 is in the tab <i>Land use</i>. It is also possible to see land use plans for each year. Information about this pages and project is in the tab <i>About</i>. Form for sending topics and notes is in the tab <i>Contact</i>.</span>
+        <h3><span class="czech">Podklady a technologie</span>
+        <span class="english">Data and technology</span></h3>
+
+        <p><span class="czech">Bývalý stav obce Přísečnice a jejího okolí byl zkoumán na Císařských otiscích mapy stabilního katastru v měřítku 1&nbsp;:&nbsp;2&nbsp;880 z roku 1842 (zkr. CO), dále pak ve Státní mapě 1&nbsp;:&nbsp;5&nbsp;000 z&nbsp;roku 1953 (zkr. SMO-5). Současná situace byla prezentována souborem vektorových dat Základní báze geografických dat České republiky (zkr. ZABAGED&reg;) a pomocí ortofotomapy. Tyto mapy a data byla převzaty z Českého úřadu zeměměřického a katastrálního. Situační plán centra obce 1&nbsp;:&nbsp;500 a stavební plány a řezy některých budov byly získány z Národního památkového ústavu v Ústí nad Labem, dobové fotografie a pohlednice byly převzaty z internetových stránek zaniklých obcí a objektů v České republice - <a href="http://www.zanikleobce.cz" title="zanikle obce">www.zanikleobce.cz</a>.</span>
+        <span class="english">Former status of the town Přísečnice and its surroundings has been studied on imperial imprints of the Stable cadastre maps in the scale 1 : 2 880 from the year 1842 (CO), state map 1 : 5 000 from the year 1953 (SMO-5). Present-day situation has been represented by a set of vector data of the Fundamental Base of Geographic Data of the Czech Republic (ZABAGED&reg;) and by orthophoto. The maps/data were provided by the Czech Office for Surveying, Mapping and Cadastre. Site plan of the town centre 1 : 500 and construction plans and section views of some municipal buildings were obtained from the National Heritage Institute in Ústí nad Labem, period photos and postcards were taken from the website of extinct villages and objects in the Czech Republic – <a href="http://www.zanikleobce.cz" title="extinct villages">www.zanikleobce.cz</a>.</span>
         <span class="french"></span></p>
 
-        <p><span class="czech"><i>Stránky jsou vyvíjeny v operačním systému Windows 7 v prohlížeči Google Chrome. Omlouvám se všem, kterým tyto stránky správně nefungují pokud použijí jiný systém či prohlížeč.</i></span>
-        <span class="english"><i>Website is developed in the operating system Windows 7 and in the browser Google Chrome. I apologize to all to whom these pages do not work correctly when they will use another system or browser.</i></span>
+        <p><span class="czech">Při zpracování byl použit produkt společnosti ESRI ArcMap 10 pro georeferencování a vektorizaci mapových podkladů. Digitální model terénu centra obce a modely budov byly vytvořeny v programu SketchUp. Opensource knihovna THREE.js a Unity engine byly použity pro internetovou vizualizaci modelů. Správa, editace a prohlížení obrazových materiálů byla provedena v programu XnView.</span>
+        <span class="english">In data processing, the ESRI product ArcMap 10 was used for georeferencing and vectorizing. The digital terrain model of the town centre and models of buildings were formed in the SketchUp program. Opensource library Three.js and game engine Unity were used for internet visualization of models. Managing, editing and viewing of video materials were done in XnView program.</span>
         <span class="french"></span></p>
 
-        <div class="alert alert-warning">
-          <h2><span class="czech">Prosba ke všem pamětníkům a přátelům Přísečnice</span>
-          <span class="english">Request to all old resident and friends of Přísečnice</span>
-          <span class="french"></span></h2>
+        <h3><span class="czech">Zpracování</span>
+        <span class="english">Data processing</span>
+        <span class="french"></span></h3>
 
-          <p><span class="czech">Chtěla bych Vás požádat o zapůjčení fotografií a pohlednic zachycující exteriéry a interiéry jednotlivých budov (které však nejsou vystaveny na stránkách Zaniklé obce), dále pak různé mapy a plánky, které by doplnily bílá místa a rozšířily oblast zájmu.</span>
-          <span class="english">I would like to ask you to loan photographs and postcards depicting the exteriors and interiors of buildings (which are not subject to the website Zaniklé obce). I am also interested in maps and plans that would expand the area interest.</span>
-          <span class="french"></span></p>
+        <p><span class="czech">Prvním krokem zpracování dat bylo nastavení souřadného systému (Systém jednotné trigonometrické sítě katastrální: S&nbsp;-&nbsp;JTSK) mapových listů pomocí georeferencování. Listy SMO-5 byly georeferencovány pomocí souřadnic S&nbsp;-&nbsp;JTSK. Jednotlivé listy SMO-5 byly transformovány pomocí polynomické transformace 2. řádu na rohové body vektorizovaných polygonů mapových listů a také na střední body mapového rámu.</span>
+        <span class="english">The first step of data processing was a georeferencing of map sheets into the Czech national co-ordinate system S-JTSK. Map sheets of the State map (SMO-5) were georeferenced using the S-JTSK coordinates of the map layout. Individual sheets of SMO-5 were transformed with 2nd order polynomial transformation on the corner points of the underlying polygons (map sheets layout) and also to middle points of the map frame.</span>
+        <span class="french"></span></p>
 
-          <p><span class="czech">Zájem mám také o místní pověsti, pohádky, pověry, texty písní, životní příběhy, vše, co by pomohlo dokreslit život v Přísečnici. Po získání dostatečného množství materiálu bude vytvořena zvláštní záložka o životě místních lidí.</span>
-          <span class="english">I am also interested in local tales and legends, superstitions, lyrics, life stories, everything that would help describe life in Přísečnice.</span>
-          <span class="french"></span></p>
+        <p><span class="czech">Listy císařských otisků map stabilního katastru byly georeferencovány na mozaiku vytvořenou z SMO-5 pomocí transformaci Spline. Identické body byly voleny na styku dvou listů, na hranici pozemků a v rozích budov. V krajních případech byly body vybrány také na křižovatkách silnic nebo na okraji vodních toků. Počet identických bodů se pohyboval v intravilánu okolo 70 a v extravilánu okolo 30.</span>
+        <span class="english">The sheets of imperial imprints of Stable cadastre maps were georeferenced on the SMO-5 mosaic using the spline transformation method. Identical points were chosen at the intersection of two sheets, at the boundary of plots and in the corners of buildings. If necessary, the points were selected also at the crossing of roads or the edge of the water flow. The number of identical points was 70 in the urban area and about 30 in rural area.</span>
+        <span class="french"></span></p>
 
-          <p><span class="czech">V případě zájmu o spolupráci mě kontaktujte přes formulář v záložce <i>Kontakt</i></span>
-          <span class="english">In case of interest please contact me via the form on the <i>Contact</i> tab.</span>
-          <span class="french"></span></p>
+        <p><span class="czech">Použitý plán středu města byl naskenován ručním skenerem, jednotlivé soubory byly uloženy do formátu *.jpg s rozlišením 300dpi. Naskenované části byly pořízeny s dostatečným překryvem, které umožnilo následné georeferencování. Rastrové soubory byly georeferencovány pomocí transformace Spline pomocí map pozemkového katastru ze 30. let 20. století, které byly k dispozici jako mapová služba běžící na ArcGIS serveru Laboratoře geoinformatiky na Univerzitě J. E. Purkyně v Ústí nad Labem. Identické body byly voleny především v rozích budov.</span>
+        <span class="english">The site plan of the town centre was scanned using a handheld scanner. Individual files were saved in JPEG format with a resolution of 300dpi. Scanned sections were taken with sufficient overlap suitable for georeferencing. Raster files were georeferenced by a spline method on the Land cadastre maps from the thirties of the 20th century available as a map service running on the ArcGIS Server of the Laboratory of Geoinformatics at the J. E. Purkyně University in Ústí nad Labem. Identical points were chosen mainly in the corners of buildings.</span>
+        <span class="french"></span></p>
 
-          <p class="textRight"><span class="czech">Děkuji, Ing. Renata Duchnová</span>
-          <span class="english">Thank you, Ing. Renata Duchnová</span>
-          <span class="french"></span></p>
-        </div>
+        <p><span class="czech">Po ukončení georeferencování byly zpracované mapové listy uloženy do mozaiky. Mozaiky z SMO-5 a CO byly vektorizovány a použity pro analýzu využití ploch.</span>
+        <span class="english">To obtain continuous map layers, the processed map sheets were saved as a mosaic files. Then, the areas of land use categories have been vectorized on the CO and SMO-5 maps.</span>
+        <span class="french"></span></p>
+
+        <h3><span class="czech">Modelování budov</span>
+        <span class="english">Modeling the town centre</span>
+        <span class="french"></span></h3>
+
+        <table class="sketch">
+          <tr>
+            <td>
+              <img src="/img/sketch.png" alt="přehrada (2.5D)" title="Přehrada (2.5D)">
+            </td>
+          </tr>
+          <tr>
+            <td class="label_pic">
+              <span class="czech">Ukázka modelování budovy</span>
+              <span class="english">Demonstration of modeling of the building</span>
+            </td>
+          </tr>
+        </table>
+
+        <p><span class="czech">Digitální model terénu (DMT) centra obce byl vytvořen v programu SketchUp 2013 pomocí funkce <i>From Contours</i> a vektorizovaných vrstevnic, které byly získány z plánu obce 1&nbsp;:&nbsp;500 z roku 1972. DMT byl pak použit jako podklad pro modelování budov a kompletní vizualizaci.</span>
+        <span class="english">Digital terrain model (DTM) of the town centre has been created in the SketchUp 2013 program by the function From Contours, using vectorized contour lines from the Site plan of the town center 1 : 500 from the year 1972. The DTM then served for generating background levels for modeling of buildings and for complete visualization.</span>
+        <span class="french"></span></p>
+
+        <p><span class="czech">Před vlastním modelováním bylo nutné roztřídit jednotlivé budovy do dvou skupin podle dostupnýnch údajů: první skupina obsahovala fotografie a pohlednice bývalých budov, v druhé pak byly budovy s dostupnými stavebními plány. Všechny modely budov byly vytvořenz pomocí aplikace SketchUp 2014. Pro budovy s podklady v první skupině bylo nutné před modelací získat půdorysy včetně převýšení z digitálního modelu terénu (DMT). Tento krok byl důležitý pro vizualizaci modelu budovy v rámci DMT. U těchto modelů byla vytvořena pouze jedna nebo dvě fasády. Modely, které vznikaly podle stavebních plánů, byly vytvářeny s rovným půdorysem a jsou plnohodnotným modelem stavby. Budovy mají vymodelovány všechny obvodové stěny a interiér.</span>
+        <span class="english">Before modeling of individual houses it was necessary to sort the objects in two groups according to available data: the first group involved photographs and postcards of former buildings, while in the second group there were the buildings with available construction plans. Models of buildings were generated with SketchUp 2014. For the first group it was necessary to derive ground plans including height difference from a digital terrain model. This step was important for visualization of modeled buildings on the DTM. In these models, only one or two facades have been created. The models created from building plans were constructed on a horizontal ground plan, as complete models of the buildings – for these objects it was possible to model all outer walls and some interior details, too.</span>
+        <span class="french"></span></p>
+
+        <p><span class="czech">Při modelaci z fotografií bylo prvním krokem odhadnutí přibližné výšky stavby. Ta byla odhadnuta pomocí předmětů, jejichž výška byla známá (např. popelnice). Následovalo modelování obvodových stěn pomocí funkce Push/Pull vytažením půdorysu do požadované výšky. Do stěn pak byla přidána vymodelovaná okna, dveře a římsy. Dalším krokem bylo dokreslení střechy, vikýřů a komínů. Posledním krokem bylo přiřazení barev a textur. Při modelaci ze stavebních plánů se postupovalo obdobně. Celý plán byl zobrazen v programu SketchUp a pak následně „obkreslen“. Tím byl získán rozměrově přesný korpus modelu, který byl doplněn o podrobnosti.</span>
+        <span class="english">For modeling from photos it was important to estimate the approximate height of the building using objects with known height (e.g. dust bins). By the Push / Pull function the external walls were constructed to the desired height and then the doors, windows and cornices could be added. The next step was to depict roofs, dormers and chimneys. Finally, colors and textures were assigned to object elements. The process of modeling from building plans was similar: the plan was displayed in the SketchUp program and then depicted by "tracing". This provided a dimensionally accurate corpus of the model which has been accompanied by details.</span>
+        <span class="french"></span></p>
+
+        <h3><span class="czech">Ovládání prohlídky pomocí THREE.js</span>
+        <span class="english">THREE.js control</span>
+        <span class="french"></span></h3>
+
+        <p><span class="czech">Prohlídka se ovládá pomocí myši:</span>
+        <span class="english">The sightseeing is controlled by mouse:</span>
+        <span class="french"></span></p>
+
+        <p><span class="czech">Otáčení modelem: <i>levé tlačítko myši</i></span>
+        <span class="english">Rotating the model: <i>left mouse button</i></span>
+        <span class="french"></span></p>
+
+        <p><span class="czech">Posouvání modelu: <i>pravé tlačítko myši</i></span>
+        <span class="english">Movement to the model: <i>right mouse button</i></span>
+        <span class="french"></span></p>
+
+        <p><span class="czech">Příblížení / oddálení: <i>střední tlačítko myši, kolečko myši</i></span>
+        <span class="english">Zoom: <i>middle mouse button, mouse wheel</i></span>
+        <span class="french"></span></p>
+
+        <h3><span class="czech">Ovládání nástroje Unity</span>
+        <span class="english">Unity control</span>
+        <span class="french"></span></h3>
+
+        <p><span class="czech">Pohyb dopředu a zpět: šipky <i>"nahoru"</i> a <i>"dolu"</i> nebo klávesy <i>"w"</i> a <i>"s"</i></span>
+        <span class="english">Forward and back movement: cursor arrow <i>"up"</i> a <i>"down"</i> or keys <i>"w"</i> a <i>"s"</i></span>
+        <span class="french"></span></p>
+
+        <p><span class="czech">Pohyb do stran: šipky <i>"vlevo"</i> a <i>"vpravo"</i> nebo klávesy <i>"a"</i> a <i>"d"</i></span>
+        <span class="english">Movement to the sides: cursor arrow <i>"left"</i> a <i>"right"</i> or keys <i>"a"</i> a <i>"d"</i></span>
+        <span class="french"></span></p>
+
+        <p><span class="czech">Otáčení kamery: <i>"pohyb myší"</i></span>
+        <span class="english">Rotating the camera: <i>"mouse movement"</i></span>
+        <span class="french"></span></p>
+
+        <p><span class="czech">Skákání (překonávání překážek): <i>"mezerník"</i></span>
+        <span class="english">Jumping: <i>"space"</i></span>
+        <span class="french"></span></p>
 
         <p><span class="czech"></span>
         <span class="english"></span>
