--- a/landUse.html
+++ b/landUse.html
@@ -76,7 +76,7 @@
                   <span class="french">Le modèle du village</span>
                   </a></li>
                   <li><a href="models.html">
-                  <span class="czech">Model buduv</span>
+                  <span class="czech">Modely buduv</span>
                   <span class="english">Models</span>
                   <span class="french">Des modèles de bâtiments</span>
                   </a></li>
@@ -175,11 +175,24 @@
         <span class="english"></span>
         <span class="french"></span></p>
 
+          <table class="gal">
+            <tr>
+              <td>
+                <a class="thumbnail" href="/img/prD1.png"><img class="img-responsive" src="/img/prD1min.png" alt=" "></a>
+              </td>
+              <td>
+                <a class="thumbnail" href="/img/prD2.png"><img class="img-responsive" src="/img/prD2min.png" alt=" "></a>
+              </td>
+              <td>
+                <a class="thumbnail" href="/img/prD3.png"><img class="img-responsive" src="/img/prD3min.png" alt=" "></a>
+              </td>
+            </tr>
+          </table>
+
+<!--
         <div class="row">
           <div class="col-md-2 col-sm-2 col-xs-6">
-            <a class="thumbnail" href="/img/prD1.png">
-              <img class="img-responsive" src="/img/prD1min.png" alt=" ">
-            </a>
+            <a class="thumbnail" href="/img/prD1.png"><img class="img-responsive" src="/img/prD1min.png" alt=" "></a>
           </div>
 
           <div class="col-lg-3 col-md-4 col-xs-6">
@@ -194,6 +207,7 @@
             </a>
           </div>
         </div>
+-->
 
         <p><span class="czech"></span>
         <span class="english"></span>
