--- a/location.html
+++ b/location.html
@@ -76,7 +76,7 @@
                   <span class="french">Le modèle du village</span>
                   </a></li>
                   <li><a href="models.html">
-                  <span class="czech">Model buduv</span>
+                  <span class="czech">Modely buduv</span>
                   <span class="english">Models</span>
                   <span class="french">Des modèles de bâtiments</span>
                   </a></li>
